style.css
/* universal alignment + styles */
html {
    overflow-x: hidden;
}
body {
    padding-top:150px;
    background-color: white;
}

* {
    font-family: "Raleway", sans-serif;
  font-optical-sizing: auto;
  font-style: normal;
}

*::-webkit-scrollbar {
  width: 6px;               /* width of scrollbar */
}

*::-webkit-scrollbar-track {
  background: #ffffff;      /* track background */
  border-radius: 4px;
}

*::-webkit-scrollbar-thumb {
  background: rgba(0, 0, 0, 0.486);          /* scrollbar handle color */
  border-radius: 4px;
}

/* navbar */
.navbar {
    background-color: #E6CCB2;
    box-shadow:0px 0px 15px 1px rgba(0, 0, 0, 0.235);

}
.navbar-brand img {
    width: 45px;
    height:45px;
    border-radius: 100%;
}

/* section  1 - home pg */

#offeringPathways {
    background-color: #F5F9FC;
}

.reikiYogaSound {
    background-color: white;
}

.catPena {
    font-family: "Qwigley", cursive;
  font-weight: 400;
  font-style: normal;
  font-size:60px;
}

#offeringPathways img {
    width: 100%;
    height:auto;
}

#offeringPathways p {
    font-size:20px;
}

.btn-outline, .btn-outline a {
    color: #C57B57;
    border-color: #C57B57;
    text-decoration: none;
    font-size:20px;
}

/* section 2, 3, 4 - home pg */
#reiki {
    background-image: url('imgs/reiki.jpeg');
    background-position: center;
    background-repeat: no-repeat;
    width:100%;
    background-size: cover;
    background-attachment: fixed;
}
#yoga {
    background-image: url('imgs/yoga-beach.jpeg');
    background-position: center;
    background-repeat: no-repeat;
    width:100%;
    background-size: cover;
        background-attachment: fixed;
}
#sound {
    background-image: url('imgs/gong-scaled.jpeg');
    background-position: center;
    background-repeat: no-repeat;
    width:100%;
    background-size: cover;
        background-attachment: fixed;
}

#offeringPathways, #reiki, #yoga, #sound, #reviews {
    box-shadow:0px 0px 15px 1px rgba(0, 0, 0, 0.235);
}

#reiki .row, #yoga .row, #sound .row {
    height: 350px;
    margin-top: 200px;
    margin-bottom:200px;
    backdrop-filter: brightness(50%);
}

#reiki h2, #yoga h2, #sound h2 {
    font-size:40px;
    font-weight: bold;
    color:white;
    margin-bottom:30px;
}

#reiki p, #yoga p, #sound p {
    font-size:25px;
    font-weight: normal;
    color:white;
}

/* section 5- home pg */
#reviews {
    background-color: #F5F9FC;
    height:auto;
    margin-top: 200px;
    margin-bottom:200px;
}


.card-title {
    font-size:30px;
    font-weight: 500;
}
.carousel-control-prev-icon, .carousel-control-next-icon {
    background-color: black;
    border-radius: 100%;
    padding:10%;

}


/* section 1, 2, 3 - about pg */
#freqAskedQues, #meetCatherine {
    margin-top: 200px;
    margin-bottom:200px;
    padding:25px;
}

#location, #meetCatherine {
    background-color: #F0EFEB;
    margin-top:50px;
    box-shadow:0px 0px 15px 1px rgba(0, 0, 0, 0.235);
    padding:25px;
}

#location p {
    font-size:20px;
}

#freqAskedQues {
    background-color: #E6CCB2;
    box-shadow:0px 0px 15px 1px rgba(0, 0, 0, 0.235);
}

#accordionExample, .accordion {
    border-radius:5px;
    box-shadow: inset -5px 0px 15px 2px rgba(0, 0, 0, 0.935);
}
.accordion-item, .accordion-button {
    background: transparent;
    border:1px solid black;
}

.accordion-button:not(.collapsed) {
    background:rgba(0, 0, 0, 0.235);
    color:white;
     box-shadow:none;
    border-radius:5px;
}

#freqAskedQues li, #accordionExample p {
    text-align: left;
}

#accordionExample a {
    color:black;
}

#meetCatherine li, #meetCatherine p {
    font-size:20px;
}

/* services pg */

.btn-active {
    font-weight:bold;
}

#whatReiki, #testimonialReiki {
    background-color: #F0EFEB;
    margin-top: 50px;
    margin-bottom:200px;
    padding:25px;
    box-shadow:0px 0px 15px 1px rgba(0, 0, 0, 0.235);
}

#whatReiki .card-title {
    font-size:24px;
}

#Reiki h2, #Reiki h1 {
    font-size:40px;
}

#Reiki h2 {
    font-size:33px;
}

#receiveReiki {
    background-color: #E6CCB2;
    margin-top: 200px;
    margin-bottom:200px;
    padding:25px;
    box-shadow:0px 0px 15px 1px rgba(0, 0, 0, 0.235);
}

#receiveReiki a {
    text-decoration: none;
    color:white;
}

#receiveReiki .btn {
    background-color: black;
}

#receiveReiki .btn:hover {
    transform:scale(1.1);
}

#testimonialReiki .card {
    background-image:url(imgs/reiki-room-1024x482.jpg);
    background-size:cover;
    background-position-y:center;
    height:40vh;
}

#testimonialReiki .card-body {
    backdrop-filter: brightness(50%);
    color:white;
    text-align:left;
}

#classDesc, #privateYoga {
    background-color: #F0EFEB;
    margin-top: 50px;
    margin-bottom:200px;
    padding:25px;
    box-shadow:0px 0px 15px 1px rgba(0, 0, 0, 0.235);
}

#classDesc li {
    font-size:20px;
}

#classPricing {
    background-color: #E6CCB2;
    margin-top: 200px;
    margin-bottom:200px;
    padding:25px;
    box-shadow:0px 0px 15px 1px rgba(0, 0, 0, 0.235);
}

#classPricing a, #privateYoga a {
    text-decoration: none;
    color: white;
}

#classPricing .card, #privateYoga .card {
    max-height:350px;
    max-width: 18rem;
}

#Reiki p, #Yoga p, #Sound p {
        font-size:20px;
}

#howItWorks, #benefitsSoundImmersion, #soundSessions {
    background-color: #F0EFEB;
    margin-top: 50px;
    margin-bottom:200px;
    padding:25px;
    box-shadow:0px 0px 15px 1px rgba(0, 0, 0, 0.235);
}
#soundImmersion, #testimonialSound {
    background-color: #E6CCB2;
    margin-top: 200px;
    margin-bottom:200px;
    padding:25px;
    box-shadow:0px 0px 15px 1px rgba(0, 0, 0, 0.235);
}

.catPena2 {
    font-family: "Qwigley", cursive;
  font-weight: 400;
  font-style: normal;
  font-size:50px;
}

#testimonialSound .card {
    background-image:url(imgs/reiki-room-1024x482.jpg);
    background-size:cover;
    background-position-y:center;
    height:40vh;
}

#testimonialSound .card-body {
    backdrop-filter: brightness(50%);
    color:white;
    text-align:left;
}

#soundSessions .card1 {
    background-image:url(imgs/privSoundHealingSession.jpg);
    background-size:cover;
    background-position-y:center;
}

#soundSessions .card-body {
    backdrop-filter: brightness(45%);
    color:white;
    text-align:left;
}

#soundSessions .card1 .card-body {
    backdrop-filter: brightness(70%);
}

#soundSessions .card {
    height:35vh;
    max-height:60vh;
    overflow-y: auto;
}

#soundSessions .card2 {
    background-image:url(imgs/communitySoundBath.png);
    background-size:cover;
    background-position-y:center;
}

#soundSessions .card3 {
    background-image:url(imgs/privGroupSoundBath.jpg);
    background-size:cover;
    background-position-y:center;
}


#soundSessions a {
    text-decoration: none;
    color:#CFA84A;
}

#soundSessions .btn {
    background-color: black;
    border:1px solid #CFA84A;
}

#soundSessions .btn:hover {
    transform:scale(1.1);
}

#punchpassEmbed a {
    text-decoration: none;
    color:#CFA84A;
    font-size:20px;
    
}

#punchpassEmbed .btn {
    background-color: black;
    border:1px solid #CFA84A;
    padding:10px;
}

#punchpassEmbed .btn:hover {
    transform:scale(1.1);
}

#punchpassEmbed iframe {
    margin-bottom:200px;
    box-shadow:0px 0px 15px 1px rgba(0, 0, 0, 0.235);
    border:1px solid black;
    border-radius: 5px;
}

#contactForm {
    margin-top: 50px;
    margin-bottom:200px;
    padding:25px;
}

form {
    background-color: white;
    box-shadow:0px 0px 15px 1px rgba(0, 0, 0, 0.235);
    padding:25px;
    border-radius:5px;
}

input, textarea {
    background-color: #d3d2cd;
}

.submit {
    background-color: black;
    color:#CFA84A;
    border:none;
    width:80%;
}

.submit:hover {
    transform:scale(1.01);
    background-color: black;
    color:#CFA84A;
}

/* footer */
footer img {
    width: 150px;
    height:150px;
}

footer * {
    color: #CFA84A;
}

footer p {
    font-size:19px;
}

footer a {
    text-decoration: none;
}

footer {
     background-color: black; 
     color:white; 
     margin-top:30px;
}

